# genai_tutorials

./: README.md
agents/frameworks/agno-tutorials/dag_graph/: .gitignore  ARCHITECTURE.md  ARCHITECTURE_SUMMARY.md  CLAUDE.md  CREATE_NEW_PIPELINE.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  MULTITURN_IMPLEMENTATION_GUIDE.md  NEW_PIPELINE_QUICKSTART.md  REFACTORING.md  main.py  pyproject.toml  pytest.ini
agents/frameworks/agno-tutorials/dag_graph/.doc_sessions/: agno_sessions.json
agents/frameworks/agno-tutorials/dag_graph/docs/: DOC2_WORKFLOW.md  DOC3_IMPLEMENTATION.md  PROJECT_SUMMARY.md
agents/frameworks/agno-tutorials/dag_graph/docs/analysis/: requirements_analysis_multi-turn-conversation-2026-06-20.md  requirements_analysis_state-machine-workflow-2026-06-20.md
agents/frameworks/agno-tutorials/dag_graph/docs/design/: design_spec_multi-turn-conversation-2026-06-20.md
agents/frameworks/agno-tutorials/dag_graph/engine/: __init__.py  agent.py  guardrail.py  session.py  workflow.py
agents/frameworks/agno-tutorials/dag_graph/src/: main.py
agents/frameworks/agno-tutorials/dag_graph/tests/: test_engine_handler_registry.py  test_engine_input_validation.py  test_engine_pipeline_state.py  test_multiturn_integration.py
agents/frameworks/agno-tutorials/dag_graph/workflow/: agents.py  guardrails.py  handlers.py  session.py  state_machine.py  workflow.py
agents/frameworks/langgraph/dag_graph/: .env.example  .gitignore  README.md  agno_dag_graph  pyproject.toml  pytest.ini
agents/frameworks/langgraph/dag_graph/docs/: JSON_CHECKPOINTER.md  SESSION_CHECKPOINTER.md
agents/frameworks/langgraph/dag_graph/src/: __init__.py  main.py
agents/frameworks/langgraph/dag_graph/tests/: __init__.py  conftest.py  test_api.py  test_doc_pipeline_router.py  test_graph_methods.py  test_guardrails.py  test_handler_integration.py  test_handler_registry.py  test_handlers_exceptions.py  test_input_validation.py  test_integration.py  test_integration_e2e.py  test_main_examples.py  test_multi_turn.py  test_multiturn_workflow.py  test_router.py  test_router_integration.py  test_semantic_router.py  test_semantic_router_integration.py  test_session_checkpointer.py  test_setup.py  test_state_machine.py
agents/misc/openclaw/: pyproject.toml
agents/misc/openclaw/bot1/: .gitignore  main-skills.py
agents/misc/openclaw/bot1/tests/: conftest.py
agents/misc/openclaw/bot1/workspace/: SOUL.md
agents/misc/openclaw/bot2/: CLAUDE.md
agents/misc/openclaw/bot2/src/: constants.py
agents/misc/openclaw/bot2/tests/: conftest.py  test_storage.py  test_tools.py
agno_tests/: main.py  pyproject.toml
agno_tests/persist/: persist_preferences.py
agno_tests/workflow/: parallel_vs_sequential.py
googleadk_tests/: .gitignore  main.py  pyproject.toml
googleadk_tests/assistant_agent/: agent.py
googleadk_tests/context/: context_compression.py
googleadk_tests/debug/: debug_context_comparison.py  debug_context_persistent.py  debug_context_stateless.py
googleadk_tests/functions/: function_call_builtinplanner.py  function_call_reactplanner.py
googleadk_tests/misc/: basic_state_memory.py  runner.py
googleadk_tests/persist/: persistent_session.py
googleadk_tests/workflow/: workflow_by_turn.py
mcp/servers/: README.md
mcp/servers/crawl_mcp/: README.md  main.py  pyproject.toml
rag/sec_rag/: README.md  main.py  pyproject.toml
rag/sec_rag/data/html/AAPL/: aapl-fy2023.meta.json  aapl-fy2024.meta.json  aapl-fy2025.meta.json
rag/sec_rag/data/html/AMZN/: amzn-fy2023.meta.json  amzn-fy2024.meta.json  amzn-fy2025.meta.json
rag/sec_rag/data/html/GOOGL/: googl-fy2023.meta.json  googl-fy2024.meta.json  googl-fy2025.meta.json
rag/sec_rag/data/html/META/: meta-fy2024.meta.json  meta-fy2025.meta.json
rag/sec_rag/data/html/MSFT/: msft-fy2023.meta.json  msft-fy2024.meta.json  msft-fy2025.meta.json
rag/sec_rag/data/html/NVDA/: nvda-fy2024.meta.json  nvda-fy2025.meta.json  nvda-fy2026.meta.json
rag/sec_rag/db/: schema.sql
rag/sec_rag/scripts/: migrate_to_nomic_embeddings.py
rag/sec_rag/src/embeddings/: __init__.py  embeddings.py
rag/sec_rag/src/eval/: DATASET_STRATEGY.md  README.md  analyze_retrieval_quality.py  debug_retrieval.py  eval_generator.py  eval_retriever.py  generate_golden_dataset.py  generate_golden_dataset_from_db.py  golden_dataset.json  validate_golden_dataset.py
rag/sec_rag/src/generator/: __init__.py
rag/sec_rag/src/ingest/: chunker.py  converter.py  embed_loader.py
rag/sec_rag/src/retriever/: __init__.py  fusion.py  generator.py  queries.py  retriever.py
rag/sec_rag/src/tools/: sec_fetcher.py
(+140 files in other folders)
