[project]
name = "sec-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docling>=2.107.0",
    "docling-core[chunking-openai]>=2.84.0",
    "httpx>=0.28.1",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.3.3",
    "openai>=2.43.0",
    "pgvector>=0.4.2",
    "psycopg[binary]>=3.3.4",
    "ragas>=0.4.3",
    "tiktoken>=0.12.0",
]
