[project]
name = "dag-graph"
version = "0.1.0"
description = "Agno-based state machine workflow for document processing"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=2.6.18",
    "python-dotenv>=1.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]
